# bevy_gamejam_2022

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
assets/tiles/: test2.ldtk
assets/tiles/test/backups/: test___2022-02-25__19-05-11.backup.ldtk  test___2022-02-25__19-10-22.backup.ldtk  test___2022-02-25__19-12-50.backup.ldtk
src/: constants.rs  level.rs  main.rs  map.rs  menu.rs  player.rs  turn.rs  ui.rs  utils.rs  wizard_lang.rs
src/ingame_ui/: basic_types.rs  memory_viewer.rs  mod.rs  round_summary.rs  sides.rs  spell_viewer.rs  top_bar.rs
src/map_entities/: enemy.rs  mod.rs  player.rs
src/spells/: mod.rs  wizard_lang.rs  wizard_memory.rs  wizard_types.rs
src/turn/: animation.rs  map_ui.rs  mod.rs
