[package]
name = "bevy_gamejam_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The bevy dependency will always be built in release mode
# so that the game runs with good fps even in testing.
[profile.dev.package.bevy]
opt-level = 3

[dependencies]
bevy = {version = "0.6"}

# For complex ui
# watch https://github.com/mvlabat/bevy_egui/pull/75
bevy_egui = "0.11.0"

# for drawing shapes in code
bevy_prototype_lyon = "0.4.0"

# for loading tile maps (made with LDtk)
bevy_ecs_tilemap = "0.5"
bevy_ecs_ldtk = { version = "0.2", features = ["atlas"]}

# for debugging
bevy-inspector-egui = "0.8.2"
